# shoot-the-aliens-legacy

./: .gitignore  CMakeLists.txt  LISEZMOI.txt  README.md  README.txt  Shoot The Aliens.cbp  Shoot The Aliens.depend  Shoot The Aliens.layout  alien.cpp  alien.h  explosion.cpp  explosion.h  fond.cpp  fond.h  gameengine.cpp  gameengine.h  gamestate.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  main.cpp  soundmanager.cpp  soundmanager.h  tir.cpp  tir.h  updater.cpp  vaisseau.cpp  vaisseau.h
Releases et setups/: script de création de setup.iss
ressources_travail/PSD/: 64x64.psd  alien.psd  alien_old.psd  explosion.psd  fond1.psd  fond2.psd  joueur.psd
ressources_travail/autre/Itch.io/: cover.psd
